<!--

    Copyright 2017 Systems Research Group, University of St Andrews:
    <https://github.com/stacs-srg>

    This file is part of the module population_model.

    population_model is free software: you can redistribute it and/or modify it under the terms of the GNU General Public
    License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later
    version.

    population_model is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
    warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.

    You should have received a copy of the GNU General Public License along with population_model. If not, see
    <http://www.gnu.org/licenses/>.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.ac.standrews.cs</groupId>
    <artifactId>valipop</artifactId>
    <version>4.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <name>valipop</name>

    <build>
        <plugins>
            <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <configuration>
                <archive>
                <manifest>
                    <mainClass>uk.ac.standrews.cs.valipop.implementations.CL_OBDModel</mainClass>
                </manifest>
                </archive>
                <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
                </descriptorRefs>
            </configuration>
            </plugin>

            <!-- This checks that the required licence is applied to all source files.  -->
            <plugin>
                <groupId>com.mycila</groupId>
                <artifactId>license-maven-plugin</artifactId>
                <version>5.0.0</version>
                <configuration>
                    <properties>
                        <project.description>&lt;https://github.com/stacs-srg/valipop&gt;</project.description>
                        <year>2025</year>
                        <owner>Systems Research Group, University of St Andrews</owner>
                        <email>graham.kirby@st-andrews.ac.uk</email>
                    </properties>
                    <licenseSets>
                        <licenseSet>
                            <header>com/mycila/maven/plugin/license/templates/GPL-3.txt</header>
                            <excludes>
                                <exclude>**/README</exclude>
                                <exclude>src/test/resources/**</exclude>
                                <exclude>src/main/resources/**</exclude>
                            </excludes>
                        </licenseSet>
                    </licenseSets>
                </configuration>
                <executions>
                    <execution>
                        <phase>initialize</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

<!--    <repositories>-->
<!--        <repository>-->
<!--            <id>uk.ac.standrews.cs.maven.repository</id>-->
<!--            <name>School of Computer Science Maven Repository</name>-->
<!--            <url>https://maven.cs.st-andrews.ac.uk/</url>-->
<!--        </repository>-->
<!--    </repositories>-->

    <properties>
        <jdk.version>21</jdk.version>
        <maven.compiler.source>${jdk.version}</maven.compiler.source>
        <maven.compiler.target>${jdk.version}</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.13.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.13.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_2.13</artifactId>
            <version>4.0.0</version>
        </dependency>

        <dependency>
            <groupId>org.gedcom4j</groupId>
            <artifactId>gedcom4j</artifactId>
            <version>2.1.8</version>
        </dependency>
    </dependencies>

    <developers>

        <developer>
            <name>Özgür Akgün</name>
            <email>ozgur.akgun@st-andrews.ac.uk</email>
            <url>https://www.st-andrews.ac.uk/computer-science/people/oa86/</url>
            <organization>University of St Andrews</organization>
            <organizationUrl>https://www.st-andrews.ac.uk/</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>

        <developer>
            <name>Daniel Brathagen</name>
            <email>dbrathagen@gmail.com</email>
            <organization>Formerly University of St Andrews</organization>
            <organizationUrl>https://www.st-andrews.ac.uk/</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>

        <developer>
            <name>Tom Dalton</name>
            <email>tomsdalton@gmail.com</email>
            <organization>Formerly University of St Andrews</organization>
            <organizationUrl>https://www.st-andrews.ac.uk/</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>

        <developer>
            <name>Alan Dearle</name>
            <email>alan.dearle@st-andrews.ac.uk</email>
            <url>https://al.host.cs.st-andrews.ac.uk/</url>
            <organization>University of St Andrews</organization>
            <organizationUrl>https://www.st-andrews.ac.uk/</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>

        <developer>
            <name>Graham Kirby</name>
            <email>graham.kirby@st-andrews.ac.uk</email>
            <url>https://www.st-andrews.ac.uk/computer-science/people/gnck</url>
            <organization>University of St Andrews</organization>
            <organizationUrl>https://www.st-andrews.ac.uk/</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>

        <developer>
            <name>James Ross</name>
            <url>https://www.linkedin.com/in/jamesross03/</url>
            <organization>University of St Andrews</organization>
            <organizationUrl>https://www.st-andrews.ac.uk/</organizationUrl>
            <roles>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>

</project>
